--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -8,7 +8,7 @@
       <div class="row card">
         <%= image_tag "草津.png", class: "card-img" %>
         <div class="card-img-overlay d-flex align-center", style="color: white;">
-          <div class="text-center mx-auto my-auto p-5", style="background-color: rgba(0,0,0,0.7); font-family: 'RocknRoll One', sans-serif;">
+          <div class="col-8 text-center mx-auto my-auto p-5", style="background-color: rgba(0,0,0,0.7); font-family: 'RocknRoll One', sans-serif;">
             <h1>ミヤゲ屋の使い方！</h1>
           </div>
         </div>
