--- a/app/views/public/users/want.html.erb
+++ b/app/views/public/users/want.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <h2 class="mb-5"><%= current_user.nickname %>さんのほしい！一覧</h2>
+      <h2 class="mb-5 text-center"><%= current_user.nickname %>  さんのほしい！一覧</h2>
       <div class ="m-3 text-right">
         <%= link_to "戻る", user_path, class: "btn btn-outline-secondary" %>
       </div>
