--- a/app/views/admin/prefectures/edit.html.erb
+++ b/app/views/admin/prefectures/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-8 mx-auto">
-      <h2 class="text-center m-3"><%= @prefecture.prefecture_name %>  編集</h2>
+      <h2 class="text-center m-3">" <%= @prefecture.prefecture_name %> "  の編集</h2>
       <div class="text-right">
         <%= link_to "戻る", admin_prefectures_path, class: "btn btn-outline-secondary" %>
       </div>
