--- a/app/views/admin/reviews/show.html.erb
+++ b/app/views/admin/reviews/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 mx-auto mt-5">
-      <h2 class="text-center"><%= @review.user.nickname %>さんの&ensp;"<%= @souvenir.souvenir_name %>"&ensp;のレビュー詳細</h2>
+    <div class="col-10 mx-auto mt-5 mb-3">
+      <h2 class="mb-3">" <%= @review.user.nickname %> " さんの</h2>
+      <h2 class="text-center">" <%= @souvenir.souvenir_name %> "&ensp;のレビュー詳細</h2>
       <div class="m-3 text-center">
         <%= link_to "戻る", reviews_admin_souvenirs_path, class: "btn btn-outline-secondary ml-5" %>
       </div>
