--- a/app/views/admin/souvenirs/edit.html.erb
+++ b/app/views/admin/souvenirs/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-10">
-      <h2 class="text-center m-3"><%= @souvenir.souvenir_name %>の編集</h2>
+    <div class="col-12">
+      <h2 class="text-center m-3">" <%= @souvenir.souvenir_name %> " の編集</h2>
       <div class="text-right">
         <%= link_to "戻る", admin_souvenir_path, class: "btn btn-outline-secondary" %>
       </div>
