--- a/app/views/admin/souvenirs/show.html.erb
+++ b/app/views/admin/souvenirs/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-10">
-      <h2 class="text-center m-3"><%= @souvenir.souvenir_name %>の詳細</h2>
-      <div class="row mt-3">
-        <div class="col-4">
+    <div class="col-12">
+      <h2 class="text-center m-3 mb-3">" <%= @souvenir.souvenir_name %> " の詳細</h2>
+      <div class="row mt-3 mb-5">
+        <div class="col-4 mb-5">
           <% if @souvenir.rakuten_image_url.present? %>
             <img src="<%= @souvenir.rakuten_image_url %>", class="card-img-top width='30%' height='50%'">
           <% else %>
@@ -15,7 +15,7 @@
           <% end %>
         </div>
         <div class="col-8">
-          <div class="d-flex justify-content-around m-3 ">
+          <div class="d-flex justify-content-around m-3 mb-5">
             <%= link_to "編集する", edit_admin_souvenir_path, class: "btn btn-outline-success" %>
             <%= link_to "戻る", admin_souvenirs_path, class: "btn btn-outline-secondary" %>
           </div>
