--- a/app/views/admin/users/review.html.erb
+++ b/app/views/admin/users/review.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 mx-auto">
-      <h2 class="text-center m-3"><%= @user.nickname %> さんのレビュー一覧</h2>
+      <h2 class="text-center m-3">" <%= @user.nickname %> " さんのレビュー一覧</h2>
       <div class="text-right">
          <%= link_to "戻る",  admin_user_path, class: "btn btn-outline-secondary" %>
       </div>
