--- a/app/views/layouts/_prefecture.html.erb
+++ b/app/views/layouts/_prefecture.html.erb
@@ -1,9 +1,9 @@
 <div class="mt-5 text-center border border-dark">
-  <h3 class="m-5">都道府県別<br>ミヤゲ</h3>
+  <h4 class="m-lg-5">都道府県別<br>ミヤゲ</h4>
     <% prefectures.each do |prefecture| %>
       <div class="m-3 text-center">
         <%= link_to search_prefecture_path(prefecture), class: "btn btn-outline-dark" do %>
-          <h5 class="m-3"><%= prefecture.prefecture_name %></h5>
+          <h5 class="m-lg-3 m-sm-2 "><%= prefecture.prefecture_name %></h5>
         <% end %>
       </div>
   <% end %>
