--- a/app/views/public/homes/_search_review.html.erb
+++ b/app/views/public/homes/_search_review.html.erb
@@ -17,24 +17,24 @@
             <td class="col-2 text-center align-middle mb-2"><h6>在住県：&ensp;<%= review.user.residence_prefecture %></h6></td>
           </tr>
           <tr>
-            <th class="card-subtitle text-center p-2">投稿日</th>
-            <td colspan="2", class="align-middle"><%= review.created_at.strftime('%Y年%m月%d日') %></td>
+            <th class="card-subtitle text-center col-3 p-2">投稿日</th>
+            <td colspan="2", class="align-middle col-4"><%= review.created_at.strftime('%Y年%m月%d日') %></td>
           </tr>
           <tr>
-            <th class="card-subtitle text-center p-2">貰った？贈った？</th>
-            <td colspan="2", class="align-middle"><%= review.receive_send %></td>
+            <th class="card-subtitle text-center col-3 p-2">貰った？贈った？</th>
+            <td colspan="2", class="align-middle col-4"><%= review.receive_send %></td>
           </tr>
           <tr>
-            <th class="card-subtitle text-center p-2">誰に？</th>
-            <td colspan="2",class="align-middle"> <%= review.people_i18n %></td>
+            <th class="card-subtitle text-center col-3 p-2">誰に？</th>
+            <td colspan="2", class="align-middle col-4"> <%= review.people_i18n %></td>
           </tr>
           <tr>
-            <th class="card-subtitle text-center p-2">用途は？</th>
-            <td colspan="2",class="align-middle"><%= review.usefulness_i18n %></td>
+            <th class="card-subtitle text-center col-3 p-2">用途は？</th>
+            <td colspan="2", class="align-middle col-4"><%= review.usefulness_i18n %></td>
           </tr>
           <tr>
-            <th class="card-subtitle text-center p-2">レビュー</th>
-            <td colspan="2",class="align-middle"><%= safe_join(review.review.split("\n"),tag(:br)) %></p></td>
+            <th class="card-subtitle text-center col-3p-2">レビュー</th>
+            <td colspan="2", class="align-middle col-4"><%= safe_join(review.review.split("\n"),tag(:br)) %></p></td>
           </tr>
         </table>
       </div>
