--- a/app/views/public/homes/search_review_column.html.erb
+++ b/app/views/public/homes/search_review_column.html.erb
@@ -7,11 +7,11 @@
     <div class="col-8 offset-1 mb-3">
       <% if params[:people].present? %>
         <% @reviews.first(1).each do |review| %>
-          <h2 class="text-center m-4"><%= review.people_i18n %>　のレビューがついたミヤゲ一覧</h2>
+          <h2 class="text-center m-4"><%= review.people_i18n %>　が選択されたレビュー一覧</h2>
         <% end %>
       <% else params[:usefulness].present? %>
         <% @reviews.first(1).each do |review| %>
-          <h2 class="text-center m-4"><%= review.usefulness_i18n %>　のレビューがついたミヤゲ一覧</h2>
+          <h2 class="text-center m-4"><%= review.usefulness_i18n %>　が選択されたレビュー一覧</h2>
         <% end %>
       <% end %>
       <div class ="m-2 text-right">
