--- a/app/views/public/homes/search_tag.html.erb
+++ b/app/views/public/homes/search_tag.html.erb
@@ -6,7 +6,7 @@
 
     <div class="col-8 offset-1 pt-5">
     	<div class="mb-3">
-        <h2 class="text-center"><%= @tag_name %>のミヤゲ一覧</h2>
+        <h2 class="text-center"><%= @tag_name %>　のタグがついたミヤゲ一覧</h2>
         <div class ="m-2 text-right">
           <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
         </div>
