--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -15,7 +15,7 @@
         </h3>
       <% end %>
 
-      <h2 class="text-center"><%= @souvenir.souvenir_name %> のレビュー詳細</h2>
+      <h2 class="text-center mb-5"><%= @souvenir.souvenir_name %>　のレビュー詳細</h2>
       <div class="m-3 text-center">
         <% if @review.user == current_user %>
           <%= link_to "編集する",  edit_souvenir_review_path, class: "btn btn-outline-success mr-5", data: {"turbolinks" => false} %>
@@ -42,7 +42,7 @@
             </td>
           </tr>
           <tr>
-            <td class="text-center align-middle">在住県名</td>
+            <td class="text-center align-middle">ユーザー在住県名</td>
             <td><%= @review.user.residence_prefecture %></td>
           </tr>
           <tr>
@@ -55,6 +55,16 @@
             <td><% if @review.price.present? %>
                   <%= @review.price.to_s(:delimited) %>円
                 <% end %>
+            </td>
+          </tr>
+          <tr>
+            <td class="text-center align-middle">ミヤゲ県名</td>
+            <td>
+              <% if @souvenir.prefecture.present? %>
+                <%= @souvenir.prefecture.prefecture_name %>
+              <% else %>
+                登録されていない都道府県
+              <% end %>
             </td>
           </tr>
           <tr>
