--- a/app/views/public/souvenirs/show.html.erb
+++ b/app/views/public/souvenirs/show.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <h2 class="text-center"><%= @souvenir.souvenir_name %>の詳細</h2>
+      <h2 class="text-center"><%= @souvenir.souvenir_name %>　の詳細</h2>
       <div class="m-3">
         <div class="d-flex justify-content-center ">
           <% if user_signed_in? %>
@@ -17,7 +17,7 @@
           <%= link_to "戻る", souvenirs_path, class: "btn btn-outline-secondary float-right my-2", data: {"turbolinks" => false} %>
         </div>
         <div class="row mt-5">
-          <div class="col-4 mt-3">
+          <div class="col-lg-4 col-sm-10 mt-3">
             <% if @souvenir.rakuten_image_url.present? %>
               <img src="<%= @souvenir.rakuten_image_url %>", class="card-img-top width='30%' height='50%'">
             <% else %>
@@ -28,7 +28,7 @@
               <a href="<%= @souvenir.rakuten_url %>">楽天の商品ページへ</a>
             <% end %>
           </div>
-          <div class="col-8 mt-3">
+          <div class="col-lg-8 col-sm-10 mt-3">
             <table class="table table-border">
               <tbody>
                 <tr>
@@ -89,7 +89,7 @@
           </div>
         </div>
 
-        <div class="text-right m-3">
+        <div class="col-12 text-right m-3">
           レビュー：全 <%= @souvenir.reviews.count %>件
         </div>
 
@@ -113,20 +113,20 @@
                   <td class="col-2 text-center align-middle mb-2"><h6><%= review.created_at.strftime('%Y年%m月%d日') %></h6></td>
                 </tr>
                 <tr>
-                  <th class="card-subtitle text-center p-2">貰った？贈った？</th>
-                  <td colspan="2", class="align-middle"><%= review.receive_send %></td>
+                  <th class="card-subtitle text-center col-3 p-2">貰った？贈った？</th>
+                  <td colspan="2", class="align-middle col-4"><%= review.receive_send %></td>
                 </tr>
                 <tr>
-                  <th class="card-subtitle text-center p-2">誰に？</th>
-                  <td colspan="2",class="align-middle"> <%= review.people_i18n %></td>
+                  <th class="card-subtitle text-center col-3 p-2">誰に？</th>
+                  <td colspan="2", class="align-middle col-4"> <%= review.people_i18n %></td>
                 </tr>
                 <tr>
-                  <th class="card-subtitle text-center p-2">用途は？</th>
-                  <td colspan="2",class="align-middle"><%= review.usefulness_i18n %></td>
+                  <th class="card-subtitle text-center col-3 p-2">用途は？</th>
+                  <td colspan="2", class="align-middle col-4"><%= review.usefulness_i18n %></td>
                 </tr>
                 <tr>
-                  <th class="card-subtitle text-center p-2">レビュー</th>
-                  <td colspan="2",class="align-middle"><%= safe_join(review.review.split("\n"),tag(:br)) %></p></td>
+                  <th class="card-subtitle text-center col-3 p-2">レビュー</th>
+                  <td colspan="2", class="align-middle col-4"><%= safe_join(review.review.split("\n"),tag(:br)) %></p></td>
                 </tr>
               </table>
             </div>
