--- a/app/views/public/souvenirs/reviews.html.erb
+++ b/app/views/public/souvenirs/reviews.html.erb
@@ -11,7 +11,7 @@
         <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
       </div>
 
-      <div class="col-12 mx-auto">
+      <div class="col-lg-12 col-sm-12 mx-auto">
        <%= render "public/homes/search_review", reviews: @reviews %>
       </div>
     </div>
