--- a/app/views/public/users/want.html.erb
+++ b/app/views/public/users/want.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="row">
         <% @user.wants.each do |want| %>
-          <div class="card-deck col-4 mx-auto mb-3">
+          <div class="card-deck col-lg-4 col-sm-4 mx-auto mb-3">
             <%= link_to souvenir_path(want.souvenir_id) do %>
               <div class="card h-100 border-secondary btn btn-outline-warning", style="width:15rem;">
                 <% if want.souvenir.rakuten_image_url.present? %>
