--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -8,9 +8,9 @@
       <%= link_to user_reviews_index_path(@review.user), data: {"turbolinks" => false} do %>
         <h3 class="mb-3">
           <% if @review.user.is_deleted == false %>
-            <%= @review.user.nickname %> さんの
+            <i class="fa-solid fa-user fa-lg"></i> <%= @review.user.nickname %> さんの
           <% else @review.user.is_deleted == true %>
-            <span>退会済みユーザー</span> の
+            <i class="fa-solid fa-user fa-lg"></i> <span>退会済みユーザー</span> の
           <% end %>
         </h3>
       <% end %>
