--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,118 @@
   color: #0000cd; /* ホバー時のテキストの色変更 */
   transform: scale(1.5); /* ホバー時の拡大率変更 */
 }
+
+// =============== 県名 サイドバー ===================================
+
+.sidebar {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 100%;
+    box-shadow: none;
+    position: sticky;
+    top: 100px;
+    left: 300;
+    width: 300px;
+    margin-top: 30px;
+    z-index: 99;
+
+}
+
+#sidebarMenu {
+    height: 75%;
+    position: fixed;
+    position: sticky;
+    top: 200px;
+    left: 300;
+    width: 300px;
+    margin-top: 50px;
+    text-align: center;
+    transform: translateX(-800px);
+    transition: transform 250ms ease-in-out;
+    background: #e0efff;
+    z-index: 99;
+}
+.sidebarMenuInner{
+    margin:0;
+    padding:0;
+}
+.sidebarMenuInner li{
+    list-style: none;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 20px;
+    cursor: pointer;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+}
+.sidebarMenuInner li a{
+    color: #000;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+}
+input[type="checkbox"]:checked ~ #sidebarMenu {
+    transform: translateX(0);
+}
+
+input[type=checkbox] {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    display: none;
+}
+.sidebarIconToggle {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: absolute;
+    position: fixed;
+    position: sticky;
+    top: 200px;
+    left: 300;
+    width: 300px;
+    margin-top: 50px;
+    z-index: 99;
+    height: 100%;
+    width: 100%;
+    top: 15px;
+    left: 15px;
+    height: 22px;
+    width: 22px;
+}
+.spinner {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+}
+.horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+
+.diagonal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+    display: none;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    opacity: 0;
+}
+
+input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    margin-top: -9px;
+    display:block;
+}
