--- a/app/views/layouts/_prefecture.html.erb
+++ b/app/views/layouts/_prefecture.html.erb
@@ -1,10 +1,19 @@
-<div class="mt-5 text-center border border-dark">
-  <h4 class="m-lg-5">都道府県別<br>ミヤゲ</h4>
-    <% prefectures.each do |prefecture| %>
-      <div class="m-3 text-center">
-        <%= link_to search_prefecture_path(prefecture), class: "btn btn-outline-dark" do %>
-          <h5 class="m-lg-3 m-sm-2 "><%= prefecture.prefecture_name %></h5>
-        <% end %>
-      </div>
-  <% end %>
+<div class="sidebar">
+  <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+  <label for="openSidebarMenu" class="sidebarIconToggle">
+    <div class="spinner horizontal"><i class="fa-solid fa-map fa-2xl"></i></i></div>
+    <div class="spinner diagonal"><i class="fa-regular fa-map fa-2xl"></i></div>
+  </label>
+  <div id="sidebarMenu">
+    <ul class="sidebarMenuInner">
+      <li>都道府県別ミヤゲ一覧</li>
+      <% prefectures.each do |prefecture| %>
+        <li><%= link_to search_prefecture_path(prefecture), class: "btn btn-outline-dark" do %>
+              <%= prefecture.prefecture_name %>
+            <% end %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 </div>
+
