--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -77,7 +77,7 @@
             <td class="d-flex flex-wrap">
               <% @review_tags.each do |tag| %>
                 <%= link_to search_tags_path(tag_name: tag.tag_name) do %>
-                  <span class="badge badge-primary text-light mr-2 p-2">
+                  <span class="badge badge-pill badge-primary text-light mr-2 p-2">
                     <%= tag.tag_name %>
                   </span>
                 <% end %>
