--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,14 +44,14 @@
 .sidebar {
     display: block;
     margin: 0 auto;
-    width: 100%;
-    max-width: 100%;
+    width: 700%;
+    max-width: 700%;
     box-shadow: none;
     position: sticky;
-    top: 100px;
+    top: 90px;
     left: 300;
     width: 300px;
-    margin-top: 30px;
+    margin-top: 20px;
     z-index: 99;
 }
 
@@ -59,10 +59,10 @@
     height: 75%;
     position: fixed;
     position: sticky;
-    top: 200px;
+    top: 100px;
     left: 300;
-    width: 300px;
-    margin-top: 50px;
+    width: 200px;
+    margin-top: 10px;
     text-align: center;
     transform: translateX(-800px);
     transition: transform 250ms ease-in-out;
@@ -105,12 +105,12 @@ input[type=checkbox] {
     position: absolute;
     position: fixed;
     position: sticky;
-    top: 200px;
-    left: 300;
+    top: 30px;
+    left: 300px;
     width: 300px;
-    margin-top: 50px;
+    margin-top: 40px;
     z-index: 99;
-    height: 100%;
+    height: 80%;
     width: 100%;
     top: 15px;
     left: 15px;
