--- a/app/views/layouts/_prefecture.html.erb
+++ b/app/views/layouts/_prefecture.html.erb
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
   <label for="openSidebarMenu" class="sidebarIconToggle">
-    <div class="spinner horizontal"><i class="fa-solid fa-map fa-2xl"></i></i></div>
-    <div class="spinner diagonal"><i class="fa-regular fa-map fa-2xl"></i></div>
+    <div class="close"><i class="fa-solid fa-map fa-3x"></i></i></div>
+    <div class="open"><i class="fa-regular fa-map fa-3x"></i></div>
   </label>
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
