--- a/app/views/admin/souvenirs/index.html.erb
+++ b/app/views/admin/souvenirs/index.html.erb
@@ -4,7 +4,7 @@
       <h2 class="text-center m-3">ミヤゲ 一覧</h2>
       <div class="d-flex justify-content-around m-3">
         <%= link_to "追加", new_admin_souvenir_path, class: "btn btn-success ml-5" %>
-        <%= link_to "戻る", admin_root_path, class: "btn btn-outline-secondary" %>
+        <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
 
       <table class="table table-border text-center m-3">
