--- a/app/views/admin/souvenirs/show.html.erb
+++ b/app/views/admin/souvenirs/show.html.erb
@@ -17,7 +17,7 @@
         <div class="col-8">
           <div class="d-flex justify-content-around m-3 mb-5">
             <%= link_to "編集する", edit_admin_souvenir_path, class: "btn btn-outline-success" %>
-            <%= link_to "戻る", admin_souvenirs_path, class: "btn btn-outline-secondary" %>
+            <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
           </div>
           <table class="table table-border m-3">
             <tbody>
