--- a/app/views/public/homes/search_review_column.html.erb
+++ b/app/views/public/homes/search_review_column.html.erb
@@ -15,7 +15,7 @@
         <% end %>
       <% end %>
       <div class ="m-2 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+        <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
       <p class="text-right mt-5 mr-5">全 <%= @reviews.count %> 件</p>
       <div class="col-12 mx-auto">
