--- a/app/views/public/homes/search_souvenir.html.erb
+++ b/app/views/public/homes/search_souvenir.html.erb
@@ -9,7 +9,7 @@
     	  <div class="mb-3">
           <h2 class="text-center">" <%= @q.souvenir_name_cont %> " の検索結果</h2>
           <div class ="m-3 text-right">
-            <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+            <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
           </div>
           <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
         </div>
