--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-6 mx-auto">
       <h2 class="text-center m-3">" <%= @user.nickname %> " さんのユーザー情報編集</h2>
       <div class="text-right">
-         <%= link_to "戻る",  admin_user_path, class: "btn btn-outline-secondary" %>
+         <%= link_to "戻る",  'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
 
       <%= form_with model: @user, url: admin_user_path do |f| %>
