--- a/app/views/public/homes/search_category.html.erb
+++ b/app/views/public/homes/search_category.html.erb
@@ -12,7 +12,7 @@
     	    <h2 class="text-center">グッズ　のミヤゲ一覧</h2>
         <% end %>
     	  <div class ="m-2 text-right">
-          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+          <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
         </div>
         <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
