--- a/app/views/public/homes/search_prefecture.html.erb
+++ b/app/views/public/homes/search_prefecture.html.erb
@@ -8,7 +8,7 @@
       <div class="mb-3">
         <h2 class="text-center"><%= @prefecture.prefecture_name %>　のミヤゲ一覧</h2>
         <div class ="m-3 text-right">
-          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary mt-3" %>
+          <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary mt-3" %>
         </div>
         <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
