--- a/app/views/public/homes/search_review_tag.html.erb
+++ b/app/views/public/homes/search_review_tag.html.erb
@@ -7,7 +7,7 @@
     <div class="col-8 offset-1 mb-3">
       <h2 class="text-center my-5"><i class="fa-solid fa-tag"></i><%= @tag_name %>　のタグがついたレビュー一覧</h2>
       <div class ="m-2 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+        <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
       <p class="text-right mt-5 mr-5">全 <%= @reviews.count %> 件</p>
       <div class="col-12 mx-auto">
