--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -7,7 +7,7 @@
     <div class="col-8 offset-1 pt-5">
       <h2 class="m-3"><%= @souvenir.souvenir_name %>　のレビュー編集画面</h2>
       <div class="text-right">
-        <%= link_to "戻る", souvenir_review_path(@souvenir, @review), class: "btn btn-outline-secondary", data: {"turbolinks" => false} %>
+        <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary", data: {"turbolinks" => false} %>
       </div>
 
       <%= form_with model: @review, url: souvenir_review_path, method: :patch do |f| %>
