--- a/app/views/public/users/review.html.erb
+++ b/app/views/public/users/review.html.erb
@@ -8,7 +8,7 @@
       <h2 class="mb-2"><i class="fa-solid fa-user fa-xl"></i> <%= current_user.nickname %> さんが</h2>
       <h2 class="text-center mb-5">投稿したレビュー一覧</h2>
       <div class ="m-3 text-right">
-        <%= link_to "戻る", user_path, class: "btn btn-outline-secondary" %>
+        <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
       <div class="row">
         <% @user.reviews.each do |review| %>
