--- a/app/views/rakuten/index.html.erb
+++ b/app/views/rakuten/index.html.erb
@@ -8,7 +8,7 @@
       <h2 class="text-center">楽天市場の商品を検索</h2>
       <% if admin_signed_in? %>
         <div class="col-12 m-3 text-right">
-          <%= link_to "戻る", new_admin_souvenir_path, class: "btn btn-outline-secondary" %>
+          <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
         </div>
         <div class="col-12 mt-4">
           <div class="mb-5">
@@ -53,7 +53,7 @@
         </div>
       <% elsif user_signed_in? %>
         <div class="col-10 m-3 text-right">
-          <%= link_to "戻る", new_souvenir_path, class: "btn btn-outline-secondary" %>
+          <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
         </div>
         <div class="col-12 mt-4">
           <div class="mb-5">
