--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -6,15 +6,15 @@
 
     <div class="col-8 offset-1 mt-5">
       <div class="row card">
-        <%= image_tag "草津.png", class: "card-img" %>
+        <%= image_tag "草津.png", :size => "500x500", class: "card-img" %>
         <div class="card-img-overlay d-flex align-center", style="color: white;">
-          <div class="col-8 text-center mx-auto my-auto p-5", style="background-color: rgba(0,0,0,0.7); font-family: 'RocknRoll One', sans-serif;">
+          <div class="col-8 text-center mx-auto my-auto p-lg-5 p-sm-2", style="background-color: rgba(0,0,0,0.7); font-family: 'RocknRoll One', sans-serif;">
             <h1>ミヤゲ屋の使い方！</h1>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-8 offset-2", style="font-family: 'RocknRoll One', sans-serif;">
+        <div class="col-10 mx-auto text-center", style="font-family: 'RocknRoll One', sans-serif;">
           <h1 class="m-5">ミヤゲ屋の使い方</h1>
           <h3 class="m-3">①ミヤゲ（おみやげ）を探す！</h3>
           <p class="ml-5 mb-4">県別、一覧、タグなどから調べたいミヤゲを検索
